feat: サイドパネルと独立ウィンドウ表示を追加
右クリックメニューから、AIアシスタントをサイドパネルまたは独立したウィンドウとして開けるようにしました。

主な変更点:
- `manifest.json`: `sidePanel` 権限を追加し、`side_panel.default_path` を設定
- `background.js`: サイドパネルと独立ウィンドウを開くためのコンテキストメニューを追加
- `detached.html`: サイドパネルの狭い幅に対応するためのレスポンシブスタイルを追加
- `popup.html`: ポップアップのデフォルトサイズを、より標準的な `420x600` に変更

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "scripting",
     "storage",
     "offscreen",
-    "contextMenus"
+    "contextMenus",
+    "sidePanel"
   ],
   "host_permissions": [
     "http://localhost:1234/",
@@ -20,6 +21,9 @@
   "action": {
     "default_popup": "popup.html",
     "default_title": "ページを要約"
+  },
+  "side_panel": {
+    "default_path": "detached.html"
   },
   "options_page": "options.html",
   "background": {
